# OpenBirch2

./: .clangd  .gitignore  .gitmodules  .ignore  CMakeLists.txt  Doxyfile  README.md  input_filter.sh  makefile
.cache/clangd/index/: main.cpp.EE229CC7D46C88D1.idx  mainwindow.cpp.322C465A8D3A839D.idx  mainwindow.h.6AC443232BB3DB77.idx  mocs_compilation.cpp.57004940D5423E87.idx
.github/workflows/: documentation-generation.yml
src/app/: CMakeLists.txt  application.qrc  custom_allocator.c  main.cpp
src/app/CAS/: CAS.h  CMakeLists.txt
src/app/CAS/BirchCAS/: AST.h  AST_Node.h  BirchCAS.cpp  BirchCAS.h  CMakeLists.txt  lexer.cpp  lexer.h  polynomial.h  token.cpp  token.h  tokentypes.h
src/gui/: CMakeLists.txt  document.cpp  document.h  document.ui  documentline.cpp  documentline.h  documentline.ui  documentsegment.cpp  documentsegment.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathitem.cpp  mathitem.h  mathsegment.cpp  mathsegment.h  nrootitem.h  obtabwidget.cpp  obtabwidget.h  outputsegment.h  textsegment.cpp  textsegment.h
